feat: use jwt to protect crd forge and list
